[package]
name = "tarpcdaemon"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bytes = "0.6"
clap = "3.0.0-beta"
ethereum-tarpc-api = { git = "https://github.com/rust-ethereum/tarpc-api" }
ethereum-types = { git = "https://github.com/paritytech/parity-common" }
futures = "0.3"
maplit = "1"
parking_lot = "0.11"
prost = "0.6"
serde = "1"
serde_json = "1"
tarpc = { version = "0.23", features = ["full"] }
tokio = { version = "0.3", features = ["full"] }
tokio-compat-02 = "0.1"
tokio-serde = { version = "0.6", features = ["bincode"] }
tonic = { version = "0.3", features = ["tls"] }

[build-dependencies]
tonic-build = "0.3"
