[package]
name = "tarpcdaemon"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta"
ethdb = { git = "https://github.com/rust-ethereum/ethdb" }
ethereum = { git = "https://github.com/rust-blockchain/ethereum" }
ethereum-tarpc-api = { git = "https://github.com/rust-ethereum/tarpc-api" }
ethereum-types = "0.10"
futures = "0.3"
serde = "1"
serde_json = "1"
tarpc = { version = "0.24", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"
tonic = { version = "0.4", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = "0.2"
